fix vertical alignment for horizontal form row layouts

--- a/assets/src/scss/components/base.scss
+++ b/assets/src/scss/components/base.scss
@@ -54,6 +54,10 @@
 		line-height: var(--input-line-height, 1.5);
 		accent-color: var(--accent-color-forms, #{$dark-blue});
 	}
+	.meta-box-checkbox label,
+	.meta-box-radio label{
+		font-size: var(--input-font-size, 0.75rem);
+	}
 }
 
 /* Watersharing Responsive Layout Classes */
@@ -158,6 +162,16 @@
 			.watersharing-input-col{
 				flex: 1 1 66%;
 			}
+		}
+	}
+	&:has(.outer-row-horizontal),
+	&:has(.outer-row-horizontal-mq-lg){
+		> label.watersharing-form-label{
+			padding-block: 14px;
+			align-items: flex-start;
+		}
+		label + .watersharing-input-col{
+			padding-block: 14px;
 		}
 	}
 }
